<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".uiAndViewModels.more.MoreFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="?attr/actionBarSize"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textAboutAppTitle"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:background="@drawable/about_rectangle"

                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/raleway_medium"

                android:padding="22dp"

                android:text="@string/about_app"
                android:textColor="@color/mainTextColor"
                android:textSize="34sp"/>

            <TextView
                android:id="@+id/textAboutApp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textAboutAppTitle"

                android:fontFamily="@font/roboto_medium"
                android:lineSpacingExtra="12sp"
                android:padding="12dp"

                android:text="@string/about_app_text"
                android:textColor="@color/mainTextColor"
                android:textSize="16sp"

                android:visibility="gone"/>

            <TextView
                android:id="@+id/textAboutAPITitle"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textAboutApp"

                android:background="@drawable/about_rectangle"

                android:clickable="true"
                android:focusable="true"

                android:fontFamily="@font/raleway_medium"

                android:padding="22dp"

                android:text="@string/about_API"
                android:textColor="@color/mainTextColor"
                android:textSize="34sp"/>

            <TextView
                android:id="@+id/textAboutAPI"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textAboutAPITitle"

                android:fontFamily="@font/roboto_medium"
                android:lineSpacingExtra="12sp"
                android:padding="12dp"

                android:text="@string/about_API_text"
                android:textColor="@color/mainTextColor"
                android:textSize="16sp"

                android:visibility="gone"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutSetting"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textAboutAPI">

                <TextView
                    android:id="@+id/textSettingTitle"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    android:background="@drawable/about_rectangle"

                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/raleway_medium"

                    android:padding="22dp"

                    android:text="@string/settings_title"
                    android:textColor="@color/mainTextColor"
                    android:textSize="34sp"/>

                <TextView
                    android:id="@+id/textAboutSettings"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textSettingTitle"

                    android:fontFamily="@font/roboto_medium"
                    android:lineSpacingExtra="12sp"
                    android:padding="12dp"

                    android:text="@string/about_settings"
                    android:textColor="@color/mainTextColor"
                    android:textSize="16sp"

                    android:visibility="gone"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textAboutSettings"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textOff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        app:layout_constraintRight_toLeftOf="@id/switchSetting"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"

                        android:text="@string/off"
                        android:fontFamily="@font/roboto_medium"
                        android:lineSpacingExtra="12sp"
                        android:padding="12dp"
                        android:textColor="@color/mainTextColor"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchSetting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"

                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:padding="7dp"

                        android:theme="@style/switchStyleSettings"
                        />

                    <TextView
                        android:id="@+id/textOn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        app:layout_constraintLeft_toRightOf="@id/switchSetting"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"

                        android:text="@string/on"
                        android:fontFamily="@font/roboto_medium"
                        android:lineSpacingExtra="12sp"
                        android:padding="12dp"
                        android:textColor="@color/mainTextColor"/>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>